tests/golden/old_kustomize_path/capi-core/capi-core/cluster-api/10_kustomize/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_capi-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capi-system/capi-serving-cert
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: cluster-api
  name: capi-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-cluster-x-k8s-io-v1beta2-cluster
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.cluster.cluster.x-k8s.io
  rules:
  - apiGroups:
    - cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-cluster-x-k8s-io-v1beta2-clusterclass
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.clusterclass.cluster.x-k8s.io
  rules:
  - apiGroups:
    - cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - clusterclasses
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-addons-cluster-x-k8s-io-v1beta2-clusterresourceset
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.clusterresourceset.addons.cluster.x-k8s.io
  rules:
  - apiGroups:
    - addons.cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterresourcesets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-addons-cluster-x-k8s-io-v1beta2-clusterresourcesetbinding
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.clusterresourcesetbinding.addons.cluster.x-k8s.io
  rules:
  - apiGroups:
    - addons.cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterresourcesetbindings
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-runtime-cluster-x-k8s-io-v1beta2-extensionconfig
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.extensionconfig.runtime.cluster.x-k8s.io
  rules:
  - apiGroups:
    - runtime.cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - extensionconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-ipam-cluster-x-k8s-io-v1beta2-ipaddress
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.ipaddress.ipam.cluster.x-k8s.io
  rules:
  - apiGroups:
    - ipam.cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - ipaddresses
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-ipam-cluster-x-k8s-io-v1beta2-ipaddressclaim
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.ipaddressclaim.ipam.cluster.x-k8s.io
  rules:
  - apiGroups:
    - ipam.cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - ipaddressclaims
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-cluster-x-k8s-io-v1beta2-machine
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.machine.cluster.x-k8s.io
  rules:
  - apiGroups:
    - cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - machines
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-cluster-x-k8s-io-v1beta2-machinedeployment
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.machinedeployment.cluster.x-k8s.io
  rules:
  - apiGroups:
    - cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - machinedeployments
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-cluster-x-k8s-io-v1beta2-machinedrainrule
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.machinedrainrule.cluster.x-k8s.io
  rules:
  - apiGroups:
    - cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - machinedrainrules
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-cluster-x-k8s-io-v1beta2-machinehealthcheck
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.machinehealthcheck.cluster.x-k8s.io
  rules:
  - apiGroups:
    - cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - machinehealthchecks
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-cluster-x-k8s-io-v1beta2-machinepool
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.machinepool.cluster.x-k8s.io
  rules:
  - apiGroups:
    - cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - machinepools
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: capi-webhook-service
      namespace: syn-cluster-api
      path: /validate-cluster-x-k8s-io-v1beta2-machineset
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.machineset.cluster.x-k8s.io
  rules:
  - apiGroups:
    - cluster.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - machinesets
  sideEffects: None
